--- a/_contact.html
+++ b/_contact.html
@@ -1,7 +1,6 @@
-<div class="container-fluid" id="contact">
+<div class="container" id="contact">
     <div class ="row">
-        <div class="col-xs-2"></div>
-        <div class="col-xs-8">
+        <div class="col-md-8 col-md-offset-2 ">
 
             <img src="resources/images/sdMap.png" style="margin-bottom: 10%">
             <form class="form">
@@ -25,7 +24,6 @@
                 <div type="submit" id="contact_submit" class="btn btn-primary">Send</div>
             </form>
         </div>
-        <div class="col-xs-2"></div>
     </div>
 </div>
 <script type="text/javascript" src="/js/_contact.js"></script>
