--- a/_checkout.html
+++ b/_checkout.html
@@ -11,7 +11,7 @@
                 </label>
                 <label class="btn list-group-item">
                     <input type="radio" name="specialnotes" id="checkout_option2" value="expensive" autocomplete="off">Most expensive option
-                </label><s></s>
+                </label>
                 <label class="btn list-group-item">
                     <input type="radio" name="specialnotes" id="checkout_option3" value="none" autocomplete="off">Nothing
                 </label>
