--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
             }
         });
 
-        $(document).on('click', function (event) {
+        $("#Butt, #User, #page-content").on('click', function (event) {
             if (menuIsVisible) {
                 menuIsVisible = false;
                 $(menuDrawer).removeClass('is-visible');
