--- a/_passwordRecovery.html
+++ b/_passwordRecovery.html
@@ -5,7 +5,10 @@
     <div class="row text-center">
         <div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3">
             <h2>Recover Password</h2>
-            <input type="email" class="form-control" id="passRecovery_email" placeholder="Enter Email">
+            <div class="input-field">
+                <input type="email" class="form-control" id="passRecovery_email">
+                <label for="passRecovery_email">Enter Email</label>
+            </div>
             <button type="submit" class="btn btn-primary" id="passRecovery_submit_email">Submit</button>
         </div>
     </div>
