--- a/_passwordReset.html
+++ b/_passwordReset.html
@@ -4,26 +4,26 @@
         <div class="row">
             <div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3">
                 <h3> Password Reset</h3>
-                <form>
-                    <fieldset class="form-group">
-                        <label for="pass1"></label>
-                        <input type="password" class="form-control" id="pass1" placeholder="Enter New Password">
-                    </fieldset>
-                </form>
+                <!--<form>-->
+                    <div class="input-field">
+                        <label for="pass1">Enter New Password</label>
+                        <input type="password" class="form-control" id="pass1">
+                    </div>
+                <!--</form>-->
             </div>
         </div>
 
         <div class="row">
             <div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3">
-                <form>
-                    <fieldset class="form-group">
-                    <label for="pass2"></label>
-                    <!--<input type="password" class="form-control" id="pass2" placeholder="Re-enter password">-->
-                    <input type="password" class="form-control" name="pass2" id="pass2" placeholder="Re-enter Password"
-                           onkeyup="checkPass(); return false;" >
-                    <span id="confirmMessage" class="confirmMessage"></span>
-                    </fieldset>
-                </form>
+                <!--<form>-->
+                    <div class="input-field">
+                        <label for="pass2">Re-enter Password</label>
+                        <!--<input type="password" class="form-control" id="pass2" placeholder="Re-enter password">-->
+                        <input type="password" class="form-control" name="pass2" id="pass2"
+                               osnkeyup="checkPass(); return false;" >
+                        <span id="confirmMessage" class="confirmMessage"></span>
+                    </div>
+                <!--</form>-->
             </div>
         </div>
 
