--- a/_signUp.html
+++ b/_signUp.html
@@ -4,15 +4,51 @@
     <div class="row">
         <div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-lg-4 col-md-offset-3 col-lg-offset-4">
         <h2 class="form-signin-heading">Fetch Sign-Up</h2><br>
-        <input type="email" class="form-control" name="email" placeholder="Your email" id="signup_user_email" required="" autofocus=""/><br>
-        <input type="text" class="form-control" name="username" placeholder="Your name" id="signup_user_name" required="" autofocus=""/><br>
-        <input type="tel" class="form-control" name="usrtel" placeholder="Your phone number" id="signup_phone" required=""/><br>
-        <input type="text" class="form-control" name="usrtel" placeholder="Street Adress" id="signup_street" required=""/><br>
-        <input type="text" class="form-control" name="usrtel" placeholder="City" id="signup_city" required=""/><br>
-        <input type="text" class="form-control" name="usrtel" placeholder="State" id="signup_state" required=""/><br>
-        <input type="text" class="form-control" name="usrtel" placeholder="Zip" id="signup_zip" required=""/><br>
-        <input type="password" class="form-control" name="password" placeholder="Create a password" id="signup_user_pass" required=""/><br>
-        <input type="password" class="form-control" name="password" placeholder="Confirm your password" id="signup_re_pass" required=""/><br>
+            <div class="input-field">
+                <input type="email" class="form-control" name="email" id="signup_user_email"/><br>
+                <label for="signup_user_email">Your Email</label>
+            </div>
+            <div class="input-field">
+                <input type="text" class="form-control" name="username" id="signup_user_name"/><br>
+                <label for="signup_user_name">Your Name</label>
+            </div>
+            <div class="input-field">
+                <input type="tel" class="form-control" name="usrtel" id="signup_phone"/><br>
+                <label for="signup_phone">Your Phone Number</label>
+            </div>
+            <div class="input-field">
+                <input type="text" class="form-control" name="usrtel" id="signup_street"/><br>
+                <label for="signup_street">Street Address</label>
+            </div>
+            <div class="input-field">
+                <input type="text" class="form-control" name="usrtel" id="signup_city"/><br>
+                <label for="signup_city">City</label>
+            </div>
+            <div class="input-field">
+                <input type="text" class="form-control" name="usrtel" id="signup_state"/><br>
+                <label for="signup_state">State</label>
+            </div>
+            <div class="input-field">
+                <input type="text" class="form-control" name="usrtel" id="signup_zip"/><br>
+                <label for="signup_zip">Zip</label>
+            </div>
+            <div class="input-field">
+                <input type="password" class="form-control" name="password" id="signup_user_pass"/><br>
+                <label for="signup_user_pass">Create Password</label>
+            </div>
+            <div class="input-field">
+                <input type="password" class="form-control" name="password" id="signup_re_pass"/><br>
+                <label for="signup_re_pass">Confirm Your Password</label>
+            </div>
+        <!--<input type="email" class="form-control" name="email" placeholder="Your email" id="signup_user_email" required="" autofocus=""/><br>-->
+        <!--<input type="text" class="form-control" name="username" placeholder="Your name" id="signup_user_name" required="" autofocus=""/><br>-->
+        <!--<input type="tel" class="form-control" name="usrtel" placeholder="Your phone number" id="signup_phone" required=""/><br>-->
+        <!--<input type="text" class="form-control" name="usrtel" placeholder="Street Adress" id="signup_street" required=""/><br>-->
+        <!--<input type="text" class="form-control" name="usrtel" placeholder="City" id="signup_city" required=""/><br>-->
+        <!--<input type="text" class="form-control" name="usrtel" placeholder="State" id="signup_state" required=""/><br>-->
+        <!--<input type="text" class="form-control" name="usrtel" placeholder="Zip" id="signup_zip" required=""/><br>-->
+        <!--<input type="password" class="form-control" name="password" placeholder="Create a password" id="signup_user_pass" required=""/><br>-->
+        <!--<input type="password" class="form-control" name="password" placeholder="Confirm your password" id="signup_re_pass" required=""/><br>-->
         <button class="btn btn-lg btn-warning btn-block" id="signup_butt" type="submit">Sign-Up</button><br>
         </div>
     </div>
