Added profile picture saving to app.js

--- a/_takeProfilePicture.html
+++ b/_takeProfilePicture.html
@@ -21,44 +21,4 @@
         </div>
     </div>
 </div>
-<script>
-    (function() {
-        loader._takeProfilePicture = {
-            onPageLoad: function(){
-                function beforeTake() {
-                    canvas.height = vid.offsetHeight;
-                    canvas.width = canvas.height;
-                }
-                enableCameraImage(vid, canvas,
-                        document.getElementById("takeButton1"),
-                        document.getElementById("redoButton1"),
-                        document.getElementById('uploadImage1'),
-                        0, beforeTake); //0 front cam, 1 back cam if available
-            },
-            onPageLeave: function(){
-                disableCamera(vid);
-            }
-        };
-
-        var vid = document.getElementById("video1");
-        var canvas = document.getElementById("canvas1");
-
-        $('#uploadButton1').click(function(){
-            disableCamera(vid);
-            //uploadFromCanvas();
-            goToPage("_signUp");
-        });
-
-
-        function uploadFromCanvas(){
-            $.ajax({
-                type: "POST",
-                url: "/savePhoto",
-                data: canvas.toDataURL("image/png"),
-                success: function(){
-                    alert("uploader");
-                }
-            });
-        }
-    })();
-</script>
+<script type="text/javascript" src="js/_takeProfilePicture.js"></script>
