--- a/_history.html
+++ b/_history.html
@@ -1,25 +1,37 @@
 <div id="_history" class="container text-center">
-    <div class="row">
-        <div class="col-xs-12">
-            <h2 class="">Your Orders</h2>
+    <div class="container box">
+        <div class="row">
+            <div class="col-xs-12">
+                <div>
+                    <h2 class="">Your Orders</h2>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-xs-12">
+                <div>
+                    <h3>Pending Tickets</h3>
+                    <ul id="yourOrders_pending_tickets" class=text-center"></ul>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="footerBars">
+        <div class="footer2"></div>
+        <div class="footer3"></div>
+    </div>
+
             <div class="box">
-                <h3>Pending Tickets</h3>
-                <ul id="yourOrders_pending_tickets" class=text-center"></ul>
+                <h3>Accepted Tickets</h3>
+                <ul id="yourOrders_accepted_tickets" class=text-center"></ul>
             </div>
             <div class="footerBars">
                 <div class="footer2"></div>
                 <div class="footer3"></div>
             </div>
 
-            <div class="box">
-                <h3>Accepted Tickets</h3>
-                <ul id="yourOrders_accepted_tickets" class=text-center"></ul>
 
-                <div class="footerBars">
-                    <div class="footer2"></div>
-                    <div class="footer3"></div>
-                </div>
-            </div>
             <div class="box">
                 <h3>Shopped Tickets</h3>
                 <ul id="yourOrders_shopped_tickets" class=text-center"></ul>
