--- a/_pendingPayment.html
+++ b/_pendingPayment.html
@@ -1,15 +1,14 @@
 
-<div class="container">
+<div class="container box2">
     <div class="row text-center">
-        <div class="col-xs-12">
-            <h2> Processing </h2>
-            </p>
-            Please wait, your payment is being processed.
-            </p>
+        <div class="col-xs-4-offset-4">
+            <div>
+                <h2> Processing </h2>
+                <h5> Please wait, your payment is being processed. </h5>
+            </div>
             <div id="loading_icon">
                 <span class="glyphicon glyphicon-repeat glyphicon-repeat-animate"></span>
             </div>
-
         </div>
     </div>
 </div>
