changed the submitted page

--- a/_submitted.html
+++ b/_submitted.html
@@ -1,12 +1,9 @@
-<div id="submitted" class="container" style="text-align: center">
+
+<div class="container box2 text-center" id="submitted" >
     <div class="row">
-        <div class="col-xs-12">
-
+        <div class="col-xs-4-offset-4">
             <h2>Payment submitted. Ticket is now posted!</h2>
-
-            <div class="row">
-                <button id="submit_submitted" type="button" class="btn btn-primary" style="margin-bottom: 10%">Confirm</button>
-            </div>
+            <button id="submit_submitted" type="button" class="btn btn-primary">Confirm</button>
         </div>
     </div>
 </div>
