changed _cancelled page

--- a/_cancelled.html
+++ b/_cancelled.html
@@ -1,11 +1,11 @@
-<div id="cancelled" class="container" style="text-align: center">
+<div class ="container box2 text-center" id="cancelled">
     <div class="row">
-        <div class="col-xs-12">
-
-            <h2>Payment has been cancelled.</h2>
-
-            <div class="row">
-                <button id="submit_cancelled" type="button" class="btn btn-primary" style="margin-bottom: 10%">Confirm</button>
+        <div class="col-xs-4-offset-4">
+            <div>
+                <h2>Payment has been cancelled.</h2>
+                <button id="submit_cancelled" type="button" class="btn btn-primary">
+                    Confirm
+                </button>
             </div>
         </div>
     </div>
