changed congratsTicketClosed page

--- a/_congratsTicketClosed.html
+++ b/_congratsTicketClosed.html
@@ -1,12 +1,14 @@
 
-<div class="container">
-    <div class="row text-center">
-        <div class="col-xs-12">
-            <h2> Congratulations!</h2>
-            <p>
-            This ticket has been successfully closed.
-            </p>
-            <button type="button" class="btn btn-link" id="_congratsClosed">Go To You Orders</button>
+<div class="container box2 text-center">
+    <div class="row">
+        <div class="col-xs-4-offset-4">
+            <div>
+                <h2> Congratulations!</h2>
+                <p> This ticket has been successfully closed. </p>
+                <button type="button" class="btn btn-link" id="_congratsClosed">
+                    Go To You Orders
+                </button>
+            </div>
         </div>
     </div>
 </div>
