--- a/_congrats.html
+++ b/_congrats.html
@@ -1,12 +1,12 @@
 
 
-<div class="container">
-    <div class="row text-center">
-        <div class="col-xs-12">
-            <h2> Congratulations!</h2>
-            </p>
-                We posted your ticket, and you will be notified as soon as it's accepted!
-            </p>
+<div class="container box2 text-center">
+    <div class="row">
+        <div class="col-xs-4-offset-4">
+            <div>
+                <h2> Congratulations!</h2>
+                </p> We posted your ticket, and you will be notified as soon as it's accepted! </p>
+            </div>
         </div>
     </div>
 </div>
