--- a/_passwordRecovery.html
+++ b/_passwordRecovery.html
@@ -1,10 +1,11 @@
 
 
-<div class="container-fluid" id="passwordRecovery">
-
-    <div class="row text-center">
+<div class="container box2" id="passwordRecovery">
+    <div class="row ">
         <div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3">
-            <h2>Recover Password</h2>
+            <div>
+                <h2>Recover Password</h2>
+            </div>
             <div class="input-field">
                 <input type="email" class="form-control" id="passRecovery_email">
                 <label for="passRecovery_email">Enter Email</label>
