--- a/_passwordReset.html
+++ b/_passwordReset.html
@@ -1,5 +1,5 @@
 
-    <div class = "container-fluid" id="passwordReset">
+    <div class = "container box2" id="passwordReset">
 
         <div class="row">
             <div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3">
