--- a/_accSetting.html
+++ b/_accSetting.html
@@ -1,5 +1,5 @@
 <div id="accSetting">
-    <div class="container" style="text-align: center">
+    <div class="container box2" style="text-align: center">
         <div class="row">
             <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
                 <h2>Account Information</h2>
