--- a/_congrats_driver_finish_shopping.html
+++ b/_congrats_driver_finish_shopping.html
@@ -1,12 +1,14 @@
 
-<div class="container">
-    <div class="row text-center">
+<div class="container box2 text-center">
+    <div class="row">
         <div class="col-xs-12">
-            <h2> Congratulations!</h2>
-            </p>
-            We posted your ticket, and you will be notified as soon as it's accepted!
-            </p>
-            <button type="button" class="btn btn-link">Go To You Deliveries</button>
+            <div>
+                <h2> Congratulations!</h2>
+                </p> We posted your ticket, and you will be notified as soon as it's accepted! </p>
+                <button type="button" class="btn btn-link">
+                    Go To You Deliveries
+                </button>
+            </div>
         </div>
     </div>
 </div>
