--- a/_login.html
+++ b/_login.html
@@ -1,5 +1,5 @@
-<div class="container" id="login-container">
-    <div class="row text-center">
+<div class="container text-center box2" id="login-container">
+    <div class="row">
         <div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-lg-4 col-md-offset-3 col-lg-offset-4">
             <h2 class="form-signin-heading">Fetch Login</h2><br>
 
