changed confirm ticket, rating pages, and shopping status / checkout pages

--- a/_checkout.html
+++ b/_checkout.html
@@ -1,4 +1,4 @@
-<div id="checkout" class="container">
+<div id="checkout" class="container box2">
     <div class="text-center row">
         <div class="col-xs-offset-2 col-xs-8">
             <h2>Continue Checkout</h2>
