--- a/_shoppingStatus.html
+++ b/_shoppingStatus.html
@@ -1,4 +1,4 @@
-<div id="_shoppingStatus" class="container" style="text-align: center">
+<div id="_shoppingStatus" class="container  box2 text-center">
     <h2>Shopping Status</h2>
     <p>At this moment, <span class = shoppingStatus_driver_name></span> is shopping for your items.</p>
     <div class="row">
