--- a/_confirmTicket.html
+++ b/_confirmTicket.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container box2">
     <div class="row text-center">
         <div class="col-xs-12">
             <h2> Confirm your ticket</h2>
