--- a/_rateUser.html
+++ b/_rateUser.html
@@ -1,6 +1,6 @@
 
 <div id="rating-page">
-    <div class="container text-center">
+    <div class="container text-center box2">
         <div class="row">
             <div class="col-xs-10 col-xs-offset-1 col-sm-4 col-sm-offset-4 col-md-4 col-lg-4 col-md-offset-4 col-lg-offset-4">
                 <h2 id="user-name_rateUser" data-id="5876"></h2>
