--- a/_yourDeliveries.html
+++ b/_yourDeliveries.html
@@ -1,54 +1,53 @@
-<div id="yourDeliveries">
+<div class= "container text-center"id="yourDeliveries">
     <div class="row">
-        <div class="col-xs-12">
-            <h2 class="text-center">Your Deliveries</h2>
-            <div class="container text-center">
-
-                <div class="row" style="margin-bottom: 3%">
-                    <div class="container box">
-                        <div class="row">
-                            <div class="col-xs-12">
-                                <h3>Accepted Tickets</h3>
-                                <ul id="yourDeliveries_accepted_tickets" class=text-center"></ul>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="footerBars">
-                        <div class="footer2"></div>
-                        <div class="footer3"></div>
-                    </div>
-                </div>
-
-                <div class="row" style="margin-bottom: 3%">
-                    <div class="container box">
-                        <div class="row">
-                            <div class="col-xs-12">
-                                <h3>Shopped Tickets</h3>
-                                <ul id="yourDeliveries_shopped_tickets" class=text-center"></ul>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="footerBars">
-                        <div class="footer2"></div>
-                        <div class="footer3"></div>
-                    </div>
-                </div>
-
-                <div class="row" style="margin-bottom: 3%">
-                    <div class="container box">
-                        <div class="row">
-                            <div class="col-xs-12">
-                                <h3>Delivered Tickets</h3>
-                                <ul id="yourDeliveries_delivered_tickets" class=text-center"></ul>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="footerBars">
-                        <div class="footer2"></div>
-                        <div class="footer3"></div>
-                    </div>
+        <div class="container box">
+            <div class="row">
+                <div class="col-xs-12">
+                    <h2>Your Deliveries</h2>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-xs-12">
+                    <h3>Accepted Tickets</h3>
+                    <ul id="yourDeliveries_accepted_tickets"></ul>
+                </div>
+            </div>
+        </div>
+        <div class="footerBars">
+            <div class="footer2"></div>
+            <div class="footer3"></div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="container box">
+            <div class="row">
+                <div class="col-xs-12">
+                    <h3>Shopped Tickets</h3>
+                    <ul id="yourDeliveries_shopped_tickets" ></ul>
+                </div>
+            </div>
+        </div>
+        <div class="footerBars">
+            <div class="footer2"></div>
+            <div class="footer3"></div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="container box">
+            <div class="row">
+                <div class="col-xs-12">
+                    <h3>Delivered Tickets</h3>
+                    <ul id="yourDeliveries_delivered_tickets"></ul>
+                </div>
+            </div>
+        </div>
+        <div class="footerBars">
+            <div class="footer2"></div>
+            <div class="footer3"></div>
+        </div>
+    </div>
         </div>
     </div>
 </div>
