--- a/notification.html
+++ b/notification.html
@@ -51,9 +51,9 @@
         }
     }
 
-    function createNotification(text, page, icon) {
-        var onClick = "closeNotification('" + page + "', this);";
-        return '<div class="notification" data-changePage="true" onclick="' + onClick + '"><div class="icon"><i class="material-icons">'
-                + icon + '</i></div><div class="text">' + text + '</div></div>';
+    function createNotification(userId, text, page, icon) {
+        var onClick = "loader.closeNotification('" + page + "', this);";
+        masters[userId].notifications.push( '<div class="notification" data-changePage="true" onclick="' + onClick + '"><div class="icon"><i class="material-icons">'
+                + icon + '</i></div><div class="text">' + text + '</div></div>');
     }
 </script>
